# crypto_price_tracker

./: .gitignore  app.py  deribit_parser.py  pyproject.toml
alembic/: env.py
alembic/versions/: f897efcca0f7_initial_tables.py
src/: app.py  collerctor.py
src/api/routers/: price_history.py  tickers.py
src/api/schemas/: price_history.py  tikcker.py
src/client/: deribit_client.py
src/core/: config.py  exeptions.py  log_filters.py  logging_config.py
src/db/: database.py
src/db/dao/: base.py  price_history.py  ticker.py
src/db/models/: __init__.py  price_history.py  ticker.py
src/services/collector/: price_history.py
tests/: conftest.py
tests/fixtures/: mock_price_history.json  mock_tickers.json
tests/integration_tests/api_tests/: test_price_history.py  test_tickers_api.py
